--- a/title_page_hebrew_inner.tex
+++ b/title_page_hebrew_inner.tex
@@ -1,19 +1,19 @@
 \begin{otherlanguage}{hebrew}
-\begin{titlepage}
 \begin{center}
+\begin{davidfont}
   \vspace*{1cm}
   
   \large
   \textbf{אוניברסיטת תל-אביב}
+  
+  \footnotesize
+  \textbf{הפקולטה להנדסה ע"ש איבי ואלדר פליישמן}
    
-  \normalsize
-  הפקולטה להנדסה ע"ש איבי ואלדר פליישמן
+  \textbf{בית הספר לתארים מתקדמים ע"ש זנדמן-סליינר}
    
-  בית הספר לתארים מתקדמים ע"ש זנדמן-סליינר
-   
-  \vspace{0.5cm}
-  \Large
-  \textbf{טביעת אצבע חומרתית של מערכות מוטסות}
+  \vspace{1.2cm}
+  \LARGE
+  \textbf{טביעת אצבע חומרתית עבור מערכות מוטסות}
   
   \vspace{0.5cm}
    
@@ -22,7 +22,7 @@
   חיבור זה הוגש כעבודת גמר לקראת התואר "מוסמך אוניברסיטה" בהנדסת חשמל
    
   \vspace{0.5cm}
-  על - ידי
+  על-ידי
    
   \Large
   \textbf{נמרוד גלבוע מרקביץ'}
@@ -33,11 +33,13 @@
   
   במחלקה למערכות
    
+  \vspace{0.5cm}
+  
   בהנחית פרופ' אבישי וול
    
   \vspace{0.5cm}
   \large
   ? תש"פ
+\end{davidfont}
 \end{center}
-\end{titlepage}
 \end{otherlanguage}
