--- a/title_page_english_outer.tex
+++ b/title_page_english_outer.tex
@@ -2,7 +2,7 @@
 \begin{center}
   \vspace*{1cm}
   
-  \large
+  \Large
   \textbf{TEL AVIV UNIVERSITY}
   
   \normalsize
@@ -11,7 +11,7 @@
   The Zandman-Slaner School of Graduate Studies
   
   \vspace{0.5cm}
-  \Large
+  \LARGE
   \textbf{Hardware Fingerprinting for the ARINC 429}
   
   \vspace{0.5cm}
