--- a/title_page_hebrew_outer.tex
+++ b/title_page_hebrew_outer.tex
@@ -1,28 +1,27 @@
 \begin{otherlanguage}{hebrew}
-\begin{titlepage}
 \begin{center}
+\begin{davidfont}
   \vspace*{1cm}
   
   \large
   \textbf{אוניברסיטת תל-אביב}
    
-  \normalsize
-  הפקולטה להנדסה ע"ש איבי ואלדר פליישמן
+  \footnotesize
+  \textbf{הפקולטה להנדסה ע"ש איבי ואלדר פליישמן}
    
-  בית הספר לתארים מתקדמים ע"ש זנדמן-סליינר
+  \textbf{בית הספר לתארים מתקדמים ע"ש זנדמן-סליינר}
+  
+  \vspace{1.2cm}
+  \LARGE
+  \textbf{טביעת אצבע חומרתית עבור מערכות מוטסות}
    
-  \vspace{0.5cm}
-  \Large
-  \textbf{טביעת אצבע חומרתית של מערכות מוטסות}
+  \vspace{1.5cm}
    
-  \vspace{0.5cm}
-   
-  \vspace{1cm}
   \normalsize
   חיבור זה הוגש כעבודת גמר לקראת התואר "מוסמך אוניברסיטה" בהנדסת חשמל
    
   \vspace{0.5cm}
-  על - ידי
+  על-ידי
    
   \Large
   \textbf{נמרוד גלבוע מרקביץ'}
@@ -30,6 +29,6 @@
   \vspace{0.5cm}
   \large
   ? תש"פ
+\end{davidfont}
 \end{center}
-\end{titlepage}
 \end{otherlanguage}
