--- a/abstract_hebrew.tex
+++ b/abstract_hebrew.tex
@@ -1,12 +1,12 @@
 \begin{otherlanguage}{hebrew}
 \begin{abstract}
-CNIRA 924 הוא אפיק הנתונים הנפוץ ביותר אשר נמצא כיום בשימוש באוויאוניקה אזרחית. אף על פי כן, הוא אינו עומד בדרישות אבטחה מודרניות, ובפרט אינו תומך באפשרות לבצע אימות שולח. יריב בעל גישה פיזית לאפיק מסוגל להחליף משדר במשדר זדוני. המקלטים הנמצאים על הקו יקבלו את המידע הזדוני ללא סייג, מאחר ואין ביכולתם לאמת את ההודעות.
+924 CNIRA הוא אפיק הנתונים הנפוץ ביותר אשר נמצא כיום בשימוש באוויאוניקה אזרחית. אף על פי כן, הוא אינו עומד בדרישות אבטחה מודרניות, ובפרט אינו תומך באפשרות לבצע אימות שולח. יריב בעל גישה פיזית לאפיק מסוגל להחליף משדר במשדר זדוני. המקלטים הנמצאים על הקו יקבלו את המידע הזדוני ללא סייג, מאחר ואין ביכולתם לאמת את ההודעות.
 
-עדכון התקן יסגור פרצות אבטחה בכלי טיס חדשים, אך ידרוש לערוך שינוי באלפי מטוסים. בינתיים, עד שהפרוטוקול יוחלף, אנו מציעים את מערכת גילוי החדירות הראשונה, הנוקטת בגישת תביעות אצבע חומרתיות עבור אימות שולח באפיק נתונים מסוג CNIRA 92. גישתנו נסמכת על האבחנה לפיה שינויים בחומרה, כגון החלפת משדר או מקלט ברכיב זדוני, משנים את צורת האות החשמלי של התשדורת. על ידי ניצול תכונה זו, אנו מסוגלים לזהות התקפות טכנאי. יישום השיטה שאנו מציעים מצריך אך ורק חיבור של יחידת פיקוח תואמת לתקן אל אפיק הנתונים.
+עדכון התקן יסגור פרצות אבטחה בכלי טיס חדשים, אך ידרוש לערוך שינוי באלפי מטוסים. בינתיים, עד שהפרוטוקול יוחלף, אנו מציעים את מערכת גילוי החדירות הראשונה, הנוקטת בגישת תביעות אצבע חומרתיות עבור אימות שולח באפיק נתונים מסוג 924 CNIRA. גישתנו נסמכת על האבחנה לפיה שינויים בחומרה, כגון החלפת משדר או מקלט ברכיב זדוני, משנים את צורת האות החשמלי של התשדורת. על ידי ניצול תכונה זו, אנו מסוגלים לזהות התקפות טכנאי. יישום השיטה שאנו מציעים מצריך אך ורק חיבור של יחידת פיקוח תואמת לתקן אל אפיק הנתונים.
 
 מכיוון שאנו נסמכים על התכונות האנלוגיות, ולא על התוכן הדיגיטלי של התשדורות, אנו מסוגלים לזהות את ההחלפה ברגע שהיא מתרחשת, אפילו אם המידע שמשודר הוא רגיל לחלוטין. באופן זה אנו מסוגלים למנוע התקפה לפני שנגרם כל נזק.
 
-במאמר זה אנו מתארים את תכן המערכת שלנו לגילוי חדירות, ואנו מעריכים את ביצועיה כנגד מודלי יריב שונים. הניתוח שלנו כולל ניתוח תיאורתי על פי מודל שרשראות מרקוביות, כמו גם הערכה אמפירית נרחבת. למטרה זו אספנו גוף נתונים של עקבות CNIRA 924, דבר שיכול להוות מוקד עניין בלתי תלוי מכיוון שלמירב ידיעתנו אין קורפוס פומבי זמין.
+במאמר זה אנו מתארים את תכן המערכת שלנו לגילוי חדירות, ואנו מעריכים את ביצועיה כנגד מודלי יריב שונים. הניתוח שלנו כולל ניתוח תיאורתי על פי מודל שרשראות מרקוביות, כמו גם הערכה אמפירית נרחבת. למטרה זו אספנו גוף נתונים של עקבות 924 CNIRA, דבר שיכול להוות מוקד עניין בלתי תלוי מכיוון שלמירב ידיעתנו אין קורפוס פומבי זמין.
 
 אנו מוצאים שהמערכת שלנו לגילוי חדירות מציאותית למדי. למשל, היא משיגה כמעט אפס אזעקות שווא לשנייה, ובו בזמן מגלה משדר זדוני בפחות מ-50 מילי שניות, ומגלה מקלט זדוני בפחות מ-3 מילי שניות. במלים אחרות, התקפות טכנאי ניתנות לגילוי באופן מהימן בזמן בדיקות תרום-טיסה, זמן רב לפני ההמראה.
 \end{abstract}
